Use Apple interpretation of bt709 for hardware decoded video frames

The Apple interpretation as gamma=1.961 will be used when the video
frame is displayed as an overlay, so use that interpretation in the GL
compositing path as well.

Bug: 836351
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I7aee20d08e8162dd2bbfdc20ba3235789a5a6216
Reviewed-on: https://chromium-review.googlesource.com/1026430
Reviewed-by: Fredrik Hubinette <hubbe@chromium.org>
Commit-Queue: ccameron <ccameron@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553277}
Former-commit-id: 8ff73532d13aeea8d125042e3ff44074fda7fadc